<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#79a951"
        android:gravity="right">

        <ImageButton
            android:id="@+id/cerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/boton_redondo"
            android:src="@drawable/tache" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bambu_perfil"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight=".7"
                android:orientation="vertical"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/fotodeperfil"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/foto_de_perfil"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical"
                        android:weightSum="2">


                        <TextView
                            android:id="@+id/nombre_de_empleado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="90dp"
                            android:text="@string/Nombre"
                            android:textAlignment="textStart"
                            android:textColor="#494949"
                            android:textSize="35sp" />

                        <TextView
                            android:id="@+id/apellido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Apellido"
                            android:textColor="#494949"
                            android:textSize="35sp" />

                        <TextView
                            android:id="@+id/area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/area"
                            android:textColor="#7a9434"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/correoelectronico"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/correo"
                            android:textColor="#7a9434"
                            android:textSize="25sp" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight=".5">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Día"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="#484B44"
                            android:id="@+id/tv_fecha"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Check-in"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="#484B44"
                            android:id="@+id/textView2"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Check-out"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="#484B44"
                            android:id="@+id/chout"
                            android:layout_weight="1" />


                    </LinearLayout>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="3dp"
                        android:background="#7A9434" />
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:id="@+id/tabla_orarios"
                            android:animateLayoutChanges="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/passwordparacheckin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:layout_marginTop="200dp"
                android:drawableLeft="@drawable/can"
                android:drawablePadding="2.5dip"
                android:hint="@string/pedir_pass"
                android:inputType="textPassword"
                android:textColor="#484B44"
                android:textColorHint="#484B44" />

            <Button
                android:id="@+id/btncheckinorout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:background="@drawable/button_boarder"
                android:text="@string/check_in" />

            <TextView
                android:id="@+id/borrarempleado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/borrar_empleado"
                android:textAlignment="center"
                android:textColor="#484b44"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/cambiarcontraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/contraseña_empleado"
                android:textAlignment="center"
                android:textColor="#484b44"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>